--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "docker:build": "docker build -t tough-chat .",
+    "docker:run": "docker run -d -p 3000:80 --name tough-chat tough-chat",
+    "docker:stop": "docker stop tough-chat && docker rm tough-chat",
+    "docker:dev": "docker-compose up -d",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
